2 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>A guide to birthdays for the growing <b>higgins clan</b></h1>
 <hello name="{{ name }}"></hello>
+<app-peeps></app-peeps>
 
 <p>
   BLAH BLAH :)
