4 files modified, 2 added

--- a/src/app/peeps/peeps.component.html
+++ b/src/app/peeps/peeps.component.html
@@ -1,3 +1,19 @@
-<p>
-peeps works (ir dies ut)
-</p>
+<div>
+ <table style="width:100%">
+  <tr>
+    <th>Days</th>
+    <th>Name</th>
+    <th>Turning...</th>
+  </tr>
+  <tr>
+    <td>-1</td>
+    <td>John</td>
+    <td>Old</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>Older</td>
+  </tr>
+</table> 
+</div>
