--- a/src/app/peeps/peeps.component.css
+++ b/src/app/peeps/peeps.component.css
@@ -1,22 +1,19 @@
 
 div{
-  border: 2px solid goldenrod;
   margin-top: 2px;
   margin-bottom: 2px;
 }
 
 table{
-  border: 2px greenyellow;
+  border-style: none;
 }
 
 th {
-  border: 1px solid blueviolet;
-  background-color: chartreuse;
+  border-bottom: 1px solid blueviolet;
 }
 
 td {
-  border: 1px solid purple;
+  border-bottom: 1px solid blueviolet;
   color: black;
   text-align: center;
-  background-color: burlywood;
 }
