--- a/src/app/peeps/peeps.component.html
+++ b/src/app/peeps/peeps.component.html
@@ -8,7 +8,7 @@
 		<tr *ngFor="let bd of birthdayEvents">
 			<td>{{bd.name}}</td>
 			<td>{{bd.daysAway}}</td>
-			<td>{{bd.ageAtBirthday}}</td>
+			<td>{{bd.ageAtBirthday}} <img src="cake5.png" alt="cake5"></td>
 		</tr>
 	</table>
 </div>
